2008-02-18	Marzo Sette Torres Junior <marzojr@yahoo.com>
	UCC: Improved handling of structs. Added a manner of specifying the integer
	size of enums with the (optional) constructs
		enum IDENTIFIER : int { const list };
		enum IDENTIFIER : byte { const list };
		enum IDENTIFIER : char { const list };

2008-02-18	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* audio/Audio.cc: Fixed occasional segfault when doing garbage collection
	  on SFX cache.
	* pathfinder/Zombie.cc: End path if new z coordinate is less than zero.
	* Others: Switched iterator postfix increment to faster prefix increment.

2008-02-17	Marzo Sette Torres Junior <marzojr@yahoo.com>
	UCC: Fixed usecode structs generating wrong indices into array. Fixed aliases
	to structs and classes so they can be of differing base types. Static structs
	can now be dlaclared.

2008-02-16	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* usecode/ucsched.*, usecode/ucscriptop.h: Implemented two new opcodes from
	  the originals: wait_while_near and wait_while_far, which cause the script
	  to halt depending on the avatar's distance from the script object. Step
	  opcode 0x53 has been revised with a (verified) delta-z parameter. Due to
	  SI's buggy usecode, which neglects to add this extra parameter on any of
	  the uses of this opcode, most of the steps taken with this opcode will
	  fail to happen -- which incidentally also happens in the original games.
	* usecode/ucinternal.cc: Added opcodes to perform the following operations
	  with usecode class member variables: array loop, aidx, set array elem.
	  Also slightly modified aidx so that it exactly matches the originals.
	  Allowing array size changes in BG too, as it is possible, even if it is
	  not used, in the original.
	* usecode/compiler/*: Added usecode structs; they are defined like classes,
	  except that they cannot have member functions and do not have inheritance.
	  They also have minimal type-checking, unlike classes, being thin wrappers