@@ -130,6 +130,11 @@ Game *Game::create_game(BaseGameInfo *mygame)
 		}
 		delete[] static_identity;
 	}
+	// Need to do this here. Maybe force on for EXULT_DEVEL_GAME too?
+	std::string str;
+	config->value("config/gameplay/bg_paperdolls", str, "yes");
+	sman->set_paperdoll_status(game_type == SERPENT_ISLE || str == "yes");
+	config->set("config/gameplay/bg_paperdolls", str, true);
 	char buf[256];
 	if (mygame && mygame->get_mod_title()!="")
 		snprintf(buf, 256, " with the '%s' modification.",
